--- a/templates/footer.html
+++ b/templates/footer.html
@@ -5,6 +5,6 @@
         <a href="https://github.com/YASHSAXEN" class="icon" target='blank'><i class="fa-brands fa-github"></i></a>
     </div>
     <div>
-        <p>All rights are reserved by Yash Saxena, © copywrite - 2024</p>
+        <p style="text-align:center;">All rights are reserved by Yash Saxena, © copywrite - 2024</p>
     </div>
 </footer>
