--- a/channel/static/channel/css/style.css
+++ b/channel/static/channel/css/style.css
@@ -162,3 +162,10 @@ input[type='file']{
 .hide-class{
   filter: blur(2px);
 }
+
+@media screen and (max-width:500px) {
+  .buttons{
+    justify-content: flex-end!important;
+    padding-right: 5px!important;
+  }
+}
