--- a/channel/templates/channel/index.html
+++ b/channel/templates/channel/index.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Chat app</title>
+    <link rel="shortcut icon" href="{% static 'channel/images/favicon.png' %}" type="image/x-icon">
+    <title>PokiChat - {{groupname.group}}</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="{% static "channel/css/login.css" %}">
     <link rel="stylesheet" href="{% static 'channel/css/style.css' %}">
@@ -37,7 +38,7 @@
             </div>
         </div>
         <div style='width: 100%;height: max-content;display: flex;justify-content:center;' class='normal2'>
-            <div style='display: flex;width: 50%;height: max-content;align-items:center;flex-direction:column;gap:10px;margin-top: 20px;margin-bottom:20px;'>
+            <div class="cover-div">
                 <div class="chat-box">
                     {% for message in chat %}
                         {% if message.message %}
@@ -76,12 +77,12 @@
         </div>
         <footer>
             <div style='display:flex; gap:20px; height:30px; font-size:20px; cursor: pointer;'>
-                <a href="https://www.linkedin.com/in/yash-saxena-1935bb226" target='blank' class="icon"> <i class="fa-brands fa-linkedin"></i></i></a>
-        <a href="mailto:yashsaxena210403@gmail.com" class="icon" target='blank'><i class="fa-regular fa-envelope"></i></a>
-        <a href="https://github.com/YASHSAXEN" class="icon" target='blank'><i class="fa-brands fa-github"></i></a>
+                <a href="https://www.linkedin.com/in/yash-saxena-1935bb226" target='blank' class="icon" style='color:black;'> <i class="fa-brands fa-linkedin"></i></i></a>
+                <a href="mailto:yashsaxena210403@gmail.com" class="icon" target='blank' style='color:black;'><i class="fa-regular fa-envelope"></i></a>
+                <a href="https://github.com/YASHSAXEN" class="icon" target='blank' style='color:black;'><i class="fa-brands fa-github"></i></a>
             </div>
-            <div style='font-size:15px;'>
-              All rights are reserved by Yash Saxena, &copy; copywrite - 2024
+            <div style='font-size:15px; width:80%;display: flex; justify-content:center;'>
+              <p style="text-align:center;">All rights are reserved by Yash Saxena, &copy; copywrite - 2024</p>
             </div>
           </footer>
     </div>
