--- a/channel/templates/channel/signup.html
+++ b/channel/templates/channel/signup.html
@@ -4,7 +4,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>SignUp Page</title>
+    <link rel="shortcut icon" href="{% static 'channel/images/favicon.png' %}" type="image/x-icon">
+    <title>PokiChat - SignUp Page</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="{% static 'channel/css/login.css' %}">
     <style>
@@ -59,8 +60,8 @@
           <a href="mailto:yashsaxena210403@gmail.com" class="icon" target='blank'><i class="fa-regular fa-envelope"></i></a>
           <a href="https://github.com/YASHSAXEN" class="icon" target='blank'><i class="fa-brands fa-github"></i></a>
         </div>
-        <div style='font-size:15px;'>
-          All rights are reserved by Yash Saxena, &copy; copywrite - 2024
+        <div style='font-size:15px; width:80%;display: flex; justify-content:center;'>
+          <p style="text-align:center;">All rights are reserved by Yash Saxena, &copy; copywrite - 2024</p>
         </div>
       </footer>
     </div>
