--- a/templates/base.html
+++ b/templates/base.html
@@ -23,12 +23,12 @@
             </div>
             <hr>
             <div style="display:flex;justify-content:space-between;padding-right:20px ">
-                <a href=""> About </a>
+                <a href="#about"> About </a>
                 <a href=""><i class="fa-solid fa-blog" style="font-size:16px;"></i></a>
             </div>
             <hr>
             <div style="display:flex;justify-content:space-between;padding-right:20px ">
-                <a href=""> How it work </a>
+                <a href="#working"> How it work </a>
                 <a href=""><i class="fa-solid fa-phone" style="font-size:16px;"></i></a>
             </div>
             <hr>
