--- a/channel/static/channel/css/home.css
+++ b/channel/static/channel/css/home.css
@@ -335,3 +335,10 @@
     }
    
 }
+
+@media screen and (max-width:430px) and (max-height:900px) {
+    .main-containers::before {
+        height:70%!important;
+        opacity: 0.25; 
+    }
+}
