--- a/channel/static/channel/css/style1.css
+++ b/channel/static/channel/css/style1.css
@@ -227,7 +227,7 @@ body::-webkit-scrollbar {
     height: 300px;
     display: flex;
     flex-direction: column;
-    background-color: lightgray;
+    /* background-color: lightgray; */
     box-sizing: border-box;
     padding-left: 20px;
     cursor: pointer;
@@ -238,8 +238,24 @@ body::-webkit-scrollbar {
     transition: all;
     transition-duration: 0.5s;
     transition-timing-function: ease-in-out;
+    z-index: 99;
+    background-color: white;
 }
 
+.detailscontaincontainer::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+ 
+    background-image: url('../images/bg-image.jpg');
+    background-size:cover;
+    background-position: center;
+    opacity: 0.4; 
+    z-index: -1;
+}
 .detailscontaincontainer a{
     font-weight: bold;
     color: Black!important;
