update css and template files

--- a/channel/templates/channel/index.html
+++ b/channel/templates/channel/index.html
@@ -13,6 +13,9 @@
         .btn:hover{
             scale:1;
         }
+        .icon{
+            color:black;
+        }
     </style>
 </head>
 <body>
@@ -75,14 +78,14 @@
                 <input type="submit" value="Submit">
             </form>
         </div>
-        <footer>
+        <footer style="height: max-content;">
             <div style='display:flex; gap:20px; height:30px; font-size:20px; cursor: pointer;'>
-                <a href="https://www.linkedin.com/in/yash-saxena-1935bb226" target='blank' class="icon" style='color:black;'> <i class="fa-brands fa-linkedin"></i></i></a>
-                <a href="mailto:yashsaxena210403@gmail.com" class="icon" target='blank' style='color:black;'><i class="fa-regular fa-envelope"></i></a>
-                <a href="https://github.com/YASHSAXEN" class="icon" target='blank' style='color:black;'><i class="fa-brands fa-github"></i></a>
+              <a href="https://www.linkedin.com/in/yash-saxena-1935bb226" target='blank' class="icon"> <i class="fa-brands fa-linkedin"></i></i></a>
+              <a href="mailto:yashsaxena210403@gmail.com" class="icon" target='blank'><i class="fa-regular fa-envelope"></i></a>
+              <a href="https://github.com/YASHSAXEN" class="icon" target='blank'><i class="fa-brands fa-github"></i></a>
             </div>
-            <div style='font-size:15px; width:80%;display: flex; justify-content:center;'>
-              <p style="text-align:center;">All rights are reserved by Yash Saxena, &copy; copywrite - 2024</p>
+            <div style='font-size:15px;text-align:center;padding-bottom:10px;'>
+              All rights are reserved by Yash Saxena, &copy; copywrite - 2024
             </div>
           </footer>
     </div>
