--- a/channel/templates/channel/login.html
+++ b/channel/templates/channel/login.html
@@ -60,13 +60,13 @@
           <p style="font-size:14px;">If you don't have an account: <a href="{% url 'signup' %}" style="text-decoration:none;">SignUp</a></p>
         </form>
       </div>
-      <footer>
+      <footer style="height: max-content;">
         <div style='display:flex; gap:20px; height:30px; font-size:20px; cursor: pointer;'>
           <a href="https://www.linkedin.com/in/yash-saxena-1935bb226" target='blank' class="icon"> <i class="fa-brands fa-linkedin"></i></i></a>
           <a href="mailto:yashsaxena210403@gmail.com" class="icon" target='blank'><i class="fa-regular fa-envelope"></i></a>
           <a href="https://github.com/YASHSAXEN" class="icon" target='blank'><i class="fa-brands fa-github"></i></a>
         </div>
-        <div style='font-size:15px;'>
+        <div style='font-size:15px;text-align:center;padding-bottom:10px;'>
           All rights are reserved by Yash Saxena, &copy; copywrite - 2024
         </div>
       </footer>
