--- a/channel/static/channel/css/home.css
+++ b/channel/static/channel/css/home.css
@@ -336,9 +336,111 @@
    
 }
 
+@media screen and (max-width:1050px) and (max-height:1400px) {
+    .main-containers::before {
+        top: 25px;
+        height:40%!important;
+        opacity: 1; 
+    }
+}
+
+@media screen and (max-width:1300px) and (max-height:850px) {
+    .main-containers::before {
+        top: 30px;
+        height:65%!important;
+        opacity: 1; 
+    }
+}
+
+@media screen and (max-width:1050px) and (max-height:700px) {
+    .main-containers::before {
+        height:90%!important;
+        opacity: 1; 
+    }
+}
+@media screen and (max-width:1050px) and (max-height:600px) {
+    .main-containers::before {
+        top: 100px!important;
+        opacity: 1; 
+    }
+}
+
+@media screen and (max-width:650px) and (max-height:400px) {
+    .main-containers::before {
+        top: 30px;
+        height:140%!important;
+        opacity: 1; 
+    }
+}
+
+
+@media screen and (max-width:780px) and (max-height:1050px) {
+    .main-containers::before {
+        top: 25px;
+        height:53%!important;
+        opacity: 0.25; 
+    }
+}
+
+@media screen and (max-width:600px) and (max-height:750px) {
+    .main-containers::before {
+        top: 25px;
+        height:80%!important;
+        opacity: 0.25; 
+    }
+}
+
+
+
 @media screen and (max-width:430px) and (max-height:900px) {
     .main-containers::before {
         height:70%!important;
         opacity: 0.25; 
+    }
+}
+
+@media screen and (max-width:350px) and (max-height:550px) {
+    .main-containers::before {
+        top: 100px;
+        opacity: 0.25; 
+    }
+}
+
+@media screen and (max-width:850px) and (max-height:1200px) {
+    .main-containers::before {
+        top: 25px;
+        height:45%!important;
+        opacity: 1; 
+    }
+}
+
+
+@media screen and (max-width:430px) and (max-height:950px) {
+    .main-containers::before {
+        height:62%!important;
+        opacity: 0.25; 
+    }
+}
+
+@media screen and (min-width:620px) and (min-height:300px) {
+    .main-containers::before {
+        height:100%!important;
+        opacity: 1;
+        top: 100px; 
+    }
+}
+
+
+@media screen and (max-width:620px) and (max-height:430px) {
+    .main-containers::before {
+        height:100%!important;
+        opacity: 0.25;
+        top: 100px; 
+    }
+}
+
+@media screen and (width:600px) and (height:1024px) {
+    .main-containers::before {
+        opacity: 0.25;
     }
 }
