--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,10 +1,10 @@
-<footer class="footer">
+<footer class="footer" style="">
     <div class='icons'>
         <a href="https://www.linkedin.com/in/yash-saxena-1935bb226" target='blank' class="icon"> <i class="fa-brands fa-linkedin"></i></i></a>
         <a href="mailto:yashsaxena210403@gmail.com" class="icon" target='blank'><i class="fa-regular fa-envelope"></i></a>
         <a href="https://github.com/YASHSAXEN" class="icon" target='blank'><i class="fa-brands fa-github"></i></a>
     </div>
     <div>
-        <p style="text-align:center;">All rights are reserved by Yash Saxena, © copywrite - 2024</p>
+        <p style="text-align:center;margin-bottom:20px;">All rights are reserved by Yash Saxena, © copywrite - 2024</p>
     </div>
 </footer>
