--- a/channel/static/channel/css/home.css
+++ b/channel/static/channel/css/home.css
@@ -1,20 +1,20 @@
-.main-container{
-    width: 100%;
-    height: 100vh;
-    max-height: max-content;
+.main-container {
+  width: 100%;
+  height: 100vh;
+  max-height: max-content;
 }
 
-.herosection{
-    width: 100%;
-    height: 400px;
-    max-height: max-content;
-    display: flex;
-    overflow: hidden;
-    position: relative;
-    z-index: 1;
+.herosection {
+  width: 100%;
+  height: 400px;
+  max-height: max-content;
+  display: flex;
+  overflow: hidden;
+  position: relative;
+  z-index: 1;
 }
 
-.herosection::before {
+/* .herosection::before {
     content: '';
     position: absolute;
     top: 0;
@@ -24,319 +24,360 @@
     background-position: center;
     opacity: 1; 
     z-index: -1;
+} */
+
+.left-content {
+  width: 55%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 30px;
+  padding: 0px 0px 0px 80px;
 }
 
-.left-content{
-    width: 70%;
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    gap: 30px;
-    padding: 0px 120px 0px 80px;
+.herosectionheading {
+  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
+    "Lucida Sans", Arial, sans-serif;
+  font-size: 65px;
+  font-weight: 900;
+  font-style: italic;
+  text-align: center;
 }
 
-.herosectionheading{
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    font-size: 65px;
-    font-weight: 900;
-    font-style: italic;
-    text-align: center;
+.herosectioncontent {
+  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
+    "Lucida Sans", Arial, sans-serif;
+  font-size: 16px;
+  opacity: 0.7;
+  text-align: center;
 }
 
-.herosectioncontent{
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    font-size: 16px;
-    opacity: 0.7;
-    text-align: center;
+.herosectionbutton {
+  width: 150px;
+  height: 40px;
+  border: 1px solid black;
+  border-radius: 10px;
+  font-size: 16px;
+  font-weight: bold;
+  cursor: pointer;
+  transition: all;
+  transition-duration: 0.3s;
 }
 
-.herosectionbutton{
-    width: 150px;
-    height: 40px;
-    border: 1px solid black;
-    border-radius: 10px;
-    font-size: 16px;
-    font-weight: bold;
-    cursor: pointer;
-    transition: all;
-    transition-duration: 0.3s;
+.herosectionbutton:hover {
+  scale: 0.9;
 }
 
-.herosectionbutton:hover{
-    scale: 0.9;
+.right-content {
+  width: 45%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
-.aboutus{
-    width: 100%;
-    height: 500px;
-    display:flex;
-    justify-content: center;
-    align-items: center;
-    max-height: max-content;
-    position: relative;
-    z-index: 1;
+.aboutus {
+  width: 100%;
+  height: 500px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  max-height: max-content;
+  position: relative;
+  z-index: 1;
 }
 
 .aboutus::before {
-    content: '';
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-image: url('../images/bg-image.jpg');
-    background-size:cover;
-    background-position: center;
-    opacity: 0.1; 
-    z-index: -1;
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-image: url("../images/bg-image.jpg");
+  background-size: cover;
+  background-position: center;
+  opacity: 0.1;
+  z-index: -1;
 }
 
-.innerabout{
-    width: 70%;
-    height: 80%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-around;
+.innerabout {
+  width: 70%;
+  height: 80%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-around;
 }
 
-.abouheading{
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    font-size: 45px;
-    font-weight: 900;
-    font-style: italic;
+.abouheading {
+  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
+    "Lucida Sans", Arial, sans-serif;
+  font-size: 45px;
+  font-weight: 900;
+  font-style: italic;
 }
 
-.aboucontent{
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    font-size: 18px;
-    text-align: justify;
-    padding: 40px;
-    opacity: 0.8;
+.aboucontent {
+  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
+    "Lucida Sans", Arial, sans-serif;
+  font-size: 18px;
+  text-align: justify;
+  padding: 40px;
+  opacity: 0.8;
 }
 
-.howitworks{
-    width: 100%;
-    height: 850px;
-    display:flex;
-    justify-content: center;
-    align-items: flex-start;
-    max-height: max-content;
-    position: relative;
-    z-index: 1;
+.howitworks {
+  width: 100%;
+  height: 850px;
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+  max-height: max-content;
+  position: relative;
+  z-index: 1;
 }
 
 .howitworks::before {
-    content: '';
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-image: url("../images/bg-image.jpg");
+  background-size: cover;
+  background-position: center;
+  opacity: 0.1;
+  z-index: -1;
+}
+
+.innerwork {
+  width: 70%;
+  height: 80%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-around;
+}
+
+.workheading {
+  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
+    "Lucida Sans", Arial, sans-serif;
+  font-size: 45px;
+  font-weight: 900;
+  font-style: italic;
+  margin-bottom: 40px;
+}
+
+.workcontainer {
+  width: 90%;
+  padding: 20px;
+  height: max-content;
+  border: 1px solid black;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 15px;
+  border-radius: 15px;
+}
+
+.workcontainer i {
+  font-size: 40px;
+}
+
+.workcontainer p {
+  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
+    "Lucida Sans", Arial, sans-serif;
+  font-size: 15px;
+  text-align: center;
+  opacity: 0.8;
+}
+
+@media screen and (max-width: 1000px) {
+  .herosectionheading {
+    font-size: 55px !important;
+  }
+  .herosectioncontent {
+    line-height: 22px !important;
+  }
+  .herosectionbutton {
+    width: 120px;
+    font-size: 14px;
+  }
+}
+
+@media screen and (max-width: 930px) {
+  .herosectionheading {
+    font-size: 50px !important;
+  }
+  .herosectioncontent {
+    line-height: 20px !important;
+    font-size: 15px;
+  }
+  .herosectionbutton {
+    width: 100px;
+    font-size: 14px;
+  }
+}
+
+@media screen and (max-width: 880px) {
+  .left-content div {
+    width: 80% !important;
+  }
+}
+
+@media screen and (max-width: 760px) {
+  .left-content div {
+    width: 90% !important;
+  }
+}
+
+@media screen and (max-width: 700px) {
+  .innerabout {
+    width: 75%;
+  }
+  .left-content div {
+    width: 95% !important;
+  }
+  .herosectionheading {
+    font-size: 48px !important;
+  }
+  .herosectioncontent {
+    font-size: 14px;
+  }
+  .herosection {
+    justify-content: center;
+  }
+  .left-content {
+    padding-left: 52px;
+    width: 65%;
+    position: relative;
+    z-index: 1;
+  }
+  .left-content div {
+    width: 100% !important;
+  }
+  .right-content {
+    display: none;
+  }
+  .left-content::before {
+    content: "";
     position: absolute;
     top: 0;
-    left: 0;
+    right: 0px;
     width: 100%;
     height: 100%;
-    background-image: url('../images/bg-image.jpg');
-    background-size:cover;
+    background-image: url("../images/bg-1.jpg");
+    background-size: 100% 100%;
+    background-repeat: no-repeat;
     background-position: center;
-    opacity: 0.1; 
+    opacity: 0.25;
     z-index: -1;
+  }
 }
-
-.innerwork{
-    width: 70%;
-    height: 80%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-around;
+@media screen and (max-width: 620px) {
+  .innerabout {
+    width: 80%;
+  }
+  .herosectioncontent {
+    font-size: 13px;
+    line-height: 18px;
+  }
+  .herosectionheading {
+    font-size: 45px !important;
+  }
+  .workcontainer {
+    margin-bottom: 20px;
+  }
+  .herosection {
+    justify-content: center;
+  }
 }
-
-.workheading{
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    font-size: 45px;
-    font-weight: 900;
-    font-style: italic;
-    margin-bottom: 40px;
-}
-
-.workcontainer{
-    width: 90%;
-    padding: 20px;
-    height: max-content;
-    border: 1px solid black;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 15px;
-    border-radius: 15px;
-}
-
-.workcontainer i{
+@media screen and (max-width: 580px) {
+  .innerabout {
+    width: 85%;
+  }
+  .workheading {
     font-size: 40px;
+  }
 }
-
-.workcontainer p{
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+@media screen and (max-width: 530px) {
+  .abouheading {
+    font-size: 40px;
+  }
+  .aboucontent {
     font-size: 15px;
-    text-align: center;
-    opacity: 0.8;
+  }
+  .workcontainer {
+    margin-bottom: 20px;
+  }
+  .workcontainer i {
+    font-size: 35px;
+  }
+  .workcontainer p {
+    font-size: 14px;
+  }
+}
+@media screen and (max-width: 470px) {
+  .innerabout {
+    width: 90%;
+  }
+  .innerwork {
+    width: 80%;
+  }
+  .left-content {
+    width: 75%;
+  }
+}
+@media screen and (max-width: 440px) {
+  .aboutus {
+    height: 550px;
+  }
+}
+@media screen and (max-width: 390px) {
+  .innerabout {
+    width: 95%;
+  }
+  .abouheading {
+    font-size: 37px;
+  }
+  .aboucontent {
+    font-size: 14px;
+  }
+  .workheading {
+    font-size: 37px;
+  }
+  .innerwork {
+    width: 85%;
+  }
+  .workcontainer i {
+    font-size: 30px;
+  }
+  .workcontainer p {
+    font-size: 13.5px;
+  }
+}
+@media screen and (max-width: 350px) {
+  .aboutus {
+    height: 600px;
+  }
+  .innerabout {
+    width: 98%;
+  }
+  .abouheading {
+    font-size: 36px;
+  }
+  .workheading {
+    font-size: 35px;
+  }
+  .innerwork {
+    width: 90%;
+  }
 }
 
-@media screen and (max-width:1000px) {
-    .herosectionheading{
-        font-size: 55px!important;
-    }
-    .herosectioncontent{
-        line-height: 22px!important;
-    }
-    .herosectionbutton{
-        width: 120px;
-        font-size: 14px;
-    }
-}
-
-@media screen and (max-width:930px) {
-    .herosectionheading{
-        font-size: 50px!important;
-    }
-    .herosectioncontent{
-        line-height: 20px!important;
-        font-size: 15px;
-    }
-    .herosectionbutton{
-        width: 100px;
-        font-size: 14px;
-    }
-}
-
-@media screen and (max-width:880px){
-    .left-content div{
-        width: 80%!important;
-    }
-}
-
-@media screen and (max-width:760px){
-    .left-content div{
-        width: 90%!important;
-    }
-}
-
-@media screen and (max-width:700px) {
-    .innerabout{
-        width: 75%;
-    }
-    .left-content div{
-        width: 95%!important;
-    }
-    .herosectionheading{
-        font-size: 48px!important;
-    }
-    .herosectioncontent{
-        font-size: 14px;
-    }
-    .left-content{
-        padding-left: 52px;
-    }
-}
-@media screen and (max-width:620px) {
-    .innerabout{
-        width: 80%;
-    }
-    .herosectioncontent{
-        font-size: 13px;
-        line-height: 18px;
-    }
-    .herosectionheading{
-        font-size: 45px!important;
-    }
-    .workcontainer{
-        margin-bottom: 20px;
-    }
-    .herosection{
-        justify-content: center;
-    }
-
-}
-@media screen and (max-width:580px) {
-    .innerabout{
-        width: 85%;
-    }
-    .workheading{
-        font-size: 40px;
-    }
-}
-@media screen and (max-width:530px) {
-    .abouheading{
-        font-size: 40px;
-    }
-    .aboucontent{
-        font-size: 15px;
-    }
-    .workcontainer{
-        margin-bottom: 20px;
-    }
-    .workcontainer i{
-        font-size: 35px;
-    }
-    .workcontainer p{
-        font-size: 14px;
-    }
-}
-@media screen and (max-width:470px) {
-    .innerabout{
-        width: 90%;
-    }
-    .innerwork{
-        width: 80%;
-    }
-}
-@media screen and (max-width:440px) {
-    .aboutus{
-        height: 550px;
-    }
-}
-@media screen and (max-width:390px) {
-    .innerabout{
-        width: 95%;
-    }
-    .abouheading{
-        font-size: 37px;
-    }
-    .aboucontent{
-        font-size: 14px;
-    }
-    .workheading{
-        font-size: 37px;
-    }
-    .innerwork{
-        width: 85%;
-    }
-    .workcontainer i{
-        font-size: 30px;
-    }
-    .workcontainer p{
-        font-size: 13.5px;
-    }
-}
-@media screen and (max-width:350px) {
-    .aboutus{
-        height: 600px;
-    }
-    .innerabout{
-        width: 98%;
-    }
-    .abouheading{
-        font-size: 36px;
-    }
-    .workheading{
-        font-size: 35px;
-    }
-    .innerwork{
-        width: 90%;
-    }
-   
-}
-
-@media screen and (max-width:1050px) and (max-height:1400px) {
+/* @media screen and (max-width:1050px) and (max-height:1400px) {
     .main-containers::before {
         top: 25px;
         height:40%!important;
@@ -437,10 +478,33 @@
         opacity: 0.25;
         top: 100px; 
     }
+}*/
+
+@media screen and (min-height: 400px) {
+  .main-containers::before {
+    top: 40px;
+  }
 }
 
-@media screen and (width:600px) and (height:1024px) {
-    .main-containers::before {
-        opacity: 0.25;
-    }
+@media screen and (min-width: 600px) and (min-height: 1023px) {
+  .main-containers::before {
+    height: 45%;
+    opacity: 0.25;
+    top: 0px;
+  }
+}
+
+@media screen and (min-width: 320px) and (min-height: 640px) {
+  .main-containers::before {
+    top: 0px;
+    height: 70%;
+  }
+}
+
+@media screen and (min-width: 700px) and (min-height: 1100px) {
+  .main-containers::before {
+    top: 20px;
+    height: 45%;
+    opacity: 1;
+  }
 }
