--- a/channel/static/channel/css/style1.css
+++ b/channel/static/channel/css/style1.css
@@ -25,7 +25,7 @@ body::-webkit-scrollbar {
     z-index: 1;
 }
 
-.main-containers::before {
+/* .main-containers::before {
     content: '';
     position: absolute;
     top: 0;
@@ -38,7 +38,7 @@ body::-webkit-scrollbar {
     background-position: center;
     opacity: 1; 
     z-index: -1;
-}
+} */
 
 .navbar{
     width: 100%;
