--- a/channel/templates/channel/home.html
+++ b/channel/templates/channel/home.html
@@ -18,6 +18,11 @@
                 <a href="{% url 'signup' %}"><button class='herosectionbutton'>Join Us</button></a>
             </div>
         </div>
+        <div class="right-content">
+            <div style='width:100%; height:100%'>
+                <img src="{% static 'channel/images/bg-1.jpg' %}" alt="" width='100%' height='100%'>
+            </div>
+        </div>
     </div>
     <div class="aboutus" id='about'>
         <div class='innerabout'>
